--- a/src/App.css
+++ b/src/App.css
@@ -550,7 +550,7 @@ img.region-img {
 }
 
 div.region-container {
-    margin: 4vw 0 4vw 0;
+    margin: 14vw 0 4vw 3vw;
 }
 
 /* /////////////////////////////////////////////////////Slideshow/////////////////////////////////////////////////////// */
@@ -619,7 +619,7 @@ input.radio {
     -ms-appearance: none;
     -moz-appearance: none;
     -moz-appearance: none;
-    appearance: none;    
+    appearance: none;
 }
 
 input.radio~span {
@@ -628,7 +628,7 @@ input.radio~span {
     text-align: middle;
     margin: 0 1vw 0 0;
     border: 3px solid white;
-    padding: 0 0.5vw 0  0.5vw;
+    padding: 0 0.5vw 0 0.5vw;
     cursor: pointer;
 }
 
@@ -894,71 +894,423 @@ span {
     }
 }
 
+/* /////////////////////////////////////////////////OrderDetails/////////////////////////////////////////////////////// */
 
-
-
-
-.menus {
-    font-size: 2.5vw;
+.OrderList-cover {
+    width: calc(0vw + 12%);
+    height: 6vw;
+    background-color: white;
+    border: 1px solid white;
+    margin: calc(0vw + 1%);
 }
 
-.menus img {
-    width: 4%;
-    float: left;
-}
-
-.desOutbox {
-    margin-left: 10%;
-}
-
-.desOutbox p {
-    margin-left: 7%;
-}
-
-.desInbox {
-    background-color: #814A2C;
+.OrderList {
+    background-color: #EBC27C;
+    width: calc(0vw + 60%);
+    margin: calc(0vw + 1%) calc(0vw + 20%) 0% calc(0vw + 20%);
+    border-radius: 0.5vw;
     display: flex;
-    border-radius: 20px;
-    width: 80%;
-    margin: 2% 10% 2% 10%;
-    color: aliceblue;
+    flex-direction: row;
 }
 
-.desInboxL {
-    padding: 1% 0% 1% 5%;
-    width: 70%;
+div.OrderList img {
+    width: 100%;
+    height: 100%;
+    margin: calc(0vw + 1%);
+    object-fit: contain;
 }
 
-.desInboxR {
-    padding: 1% 0% 1% 0%;
-    width: 30%;
+.OrderList p {
+    /* margin: 5.5% 0% 0% 5%; */
+    font-size: 1.5vw;
+    /* border: 2px solid yellow; */
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 15ch;
+    white-space: nowrap;
 }
 
-.HowTo {
-    width: 80%;
-    background-color: #4A362B;
-    border-radius: 20px;
-    margin: 2% 10% 2% 10%;
-    padding-top: 2%;
+.OrderList-box {
+    width: 20%;
+    /* background-color: violet; */
+    display: flex;
+    align-items: center;
+    margin: 1%;
 }
 
-.HowTo p {
-    padding: 1% 2% 1% 2%;
-    color: aliceblue;
+
+.payment {
+    width: 80vw;
+    height: 5vw;
+    margin-left: 10vw;
+    /* border: calc(0vw + 10px) solid black; */
+    display: flex;
+    justify-content: space-around;
 }
 
-.Step {
+.PaymentField-container {
+    display: flax;
+    position: relative;
+    padding-left: calc(0vw + 20%);
+    cursor: pointer;
+    color: black;
+    font-size: 1.5vw;
+    align-items: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+.PaymentField-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 3.2vw;
+    width: 100%;
+    padding: 0.2vw;
+    background-color: #eee;
+    border: 1px solid #ccc
+}
+
+.checkmark img {
+    width: calc(0vw + 20%);
+    height: 3.2vw;
+}
+
+.checkmark p {
+    padding: calc(0vw + 1.5%) 0% 0% calc(0vw + 5%);
+}
+
+.PaymentField-container:hover input~.checkmark {
+    background-color: #ccc;
+    border: calc(0vw + 1px) solid #4A362B;
+}
+
+
+.PaymentField-container input:checked~.checkmark {
+    background-color: #ccc;
+    border: calc(0vw + 1px) solid #4A362B;
+    box-shadow: calc(0vw + 2px) calc(0vw + 2px) calc(0vw + 1px) #707070;
+}
+
+
+.checkmark:after {
+    position: absolute;
+    display: none;
+}
+
+
+.PaymentField-container input:checked~.checkmark:after {
+    display: inline;
+}
+
+
+.PaymentField-container .checkmark:after {
+    padding: calc(0vw + 1%) 0% 0% calc(0vw + 90%);
+    content: "\2713";
+
+
+}
+
+button.Order {
+    width: 10vw;
+    color: white;
+    border-radius: calc(0vw + 8px);
+    background-color: #4a362b;
+    position: relative;
+    margin: 0px 1.5vw calc(0vw + 5%) 75.5vw;
+    font-size: 2vw;
+}
+
+/* ////////////////////////////////////////////////PaymentDetails///////////////////////////////////////////////////// */
+
+.MySales {
     background-color: #EBC27C;
     width: 10%;
-    padding: 0.5% 1% 0.5% 3.5%;
+    font-size: 1.5vw;
+    text-align: center;
+    margin-left: 15%;
     border-radius: 5px;
-    box-shadow: -5px 0px 0px #EBC27C;
 }
 
-.BG {
-    opacity: 0.2;
-    background-repeat: no-repeat;
-    position: fixed;
-    z-index: -2;
+.MySalesField {
+    width: calc(0vw + 60%);
+    margin: calc(0vw + 1%) calc(0vw + 20%) 0% calc(0vw + 20%);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+}
+
+.MySalesField img {
+    width: calc(0vw + 2.8%);
+    height: 1.5vw;
+}
+
+.payment_text {
+    padding-left: 1vw;
+    font-size: 1.1vw;
+    color: white;
+}
+
+.TimeAndDate {
+    margin-top: calc(0vw + 13%);
+    color: #DADADA;
+    font-size: 1vw;
+}
+
+button.MySales {
+    width: calc(0vw + 20%);
+    color: white;
+    border-radius: calc(0vw + 8px);
+    background-color: #4a362b;
+    margin: calc(0vw + 1%) 0% calc(0vw + 2%) calc(0vw + 40%);
+    padding: calc(0vw + 0.5%);
+    font-size: 1.5vw;
+}
+
+/* //////////////////////////////////////////////////EmptyCart/////////////////////////////////////////////////////// */
+
+.emptyCart {
+    font-size: 2vw;
+}
+
+.BGEmptyCart {
     width: 100%;
+
+    position: fixed;
+    z-index: -10;
+    opacity: 0.1;
+}
+
+.letShop {
+    margin-top: calc(0vw + 8%);
+}
+
+.letShopT {
+    font-size: 3vw;
+}
+
+.aloneCart {
+    width: 15vw;
+}
+
+button.letShopB {
+    width: 10vw;
+    color: white;
+    border-radius: calc(0vw + 8px);
+    background-color: #814A2C;
+    margin: 0px 1.5vw 0px 1.5vw;
+    font-size: 2vw;
+    margin-top: 1vw;
+}
+
+/* //////////////////////////////////////////////////EmptyCart/////////////////////////////////////////////////////// */
+
+.galleryContainer {
+    margin: auto;
+    width: 100%;
+    height: 30vw;
+    max-width: 60vw;
+    user-select: none;
+    box-shadow: 0vw 0vw 0.2vw 0.1vw #282c34;
+    padding: 1vw;
+    box-sizing: border-box;
+}
+
+.slideShowContainer {
+    margin-bottom: 1vw;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #707070;
+    position: relative;
+}
+
+.imageHolder {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    opacity: 0;
+}
+
+.imageHolder img {
+    width: 100%;
+    height: 100%;
+}
+
+.arrowL {
+    position: absolute;
+    width: 3vw;
+    height: 3vw;
+    margin: 13vw -5vw;
+    top:12vw;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.arrowR {
+    position: absolute;
+    width: 3vw;
+    height: 3vw;
+    margin: 13vw 60vw;
+    top:12vw;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.galleryContainer .moveLeftCurrentSlide {
+    animation-name: moveLeftCurrent;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+}
+
+.galleryContainer .moveLeftNextSlide {
+    animation-name: moveLeftNext;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+}
+
+@keyframes moveLeftCurrent {
+    from {
+        margin-left: 0;
+        opacity: 1;
+    }
+
+    to {
+        margin-left: -100%;
+        opacity: 1;
+    }
+}
+
+@keyframes moveLeftNext {
+    from {
+        margin-left: 100%;
+        opacity: 1;
+    }
+
+    to {
+        margin-left: 0%;
+        opacity: 1;
+    }
+}
+
+.galleryContainer .moveRightCurrentSlide {
+    animation-name: moveRightCurrent;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+}
+
+.galleryContainer .moveRightPrevSlide {
+    animation-name: moveRightPrev;
+    animation-duration: 0.5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+}
+
+@keyframes moveRightCurrent {
+    from {
+        margin-left: 0;
+        opacity: 1;
+    }
+
+    to {
+        margin-left: 100%;
+        opacity: 1;
+    }
+}
+
+@keyframes moveRightPrev {
+    from {
+        margin-left: -100%;
+        opacity: 1;
+    }
+
+    to {
+        margin-left: 0%;
+        opacity: 1;
+    }
+}
+
+.galleryContainer #dotsContainer {
+    position: relative;
+    left: -1vw;
+    width: 60vw;
+    height: 10vw;
+    text-align: center;
+    padding-top: 1vw;
+    box-sizing: border-box;
+    /* margin-bottom: 10vw; */
+}
+
+.galleryContainer #dotsContainer .slideImg {
+    margin-left: 1vw;
+    cursor: pointer;
+    width: 14.25vw;
+    opacity: 45%
+}
+
+.galleryContainer #dotsContainer .slideImg1 {
+    cursor: pointer;
+    width: 14.25vw;
+    opacity: 45%
+}
+
+.galleryContainer #dotsContainer .slideImg:hover,
+.galleryContainer #dotsContainer .slideImg.active,
+.galleryContainer #dotsContainer .slideImg1:hover,
+.galleryContainer #dotsContainer .slideImg1.active {
+    opacity: 1;
+}
+
+.imageDown {
+    position: relative;
+    margin: 3vw 0vw 0vw -11vw;
+    width: 80vw;
+    height: 10vw;
+    display: flex;
+    justify-content: center;
+}
+
+/* ///////////////////////////////////////////////////EmptyBuy//////////////////////////////////////////////////////// */
+
+.emptyBuy{
+    font-size: 2vw;
+}
+.BGEmptyBuy{
+    width: 100%;;
+    position: fixed;
+    z-index: -10;
+    opacity: 0.1;   
+}
+.letBuy{
+    margin-top: calc(0vw + 8%);
+}
+.letBuyT{
+    font-size: 3vw;
+}
+
+.businessIcon{
+    width: 15vw;   
+}
+button.letBuyB {
+    width: 10vw;
+    color: white;
+    border-radius: calc(0vw + 8px);
+    background-color: #814A2C;
+    margin: 0px 1.5vw 0px 1.5vw;
+    font-size: 2vw;
+    margin-top: 1vw;
 }
