--- a/src/App.css
+++ b/src/App.css
@@ -663,7 +663,7 @@ input.button {
     font-size: 1.5vw;
     background-color: white;
     border: 0.05vw groove black;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 input.button:active {
